@@ -1,7 +1,7 @@
 Name:		globus-proxy-utils
 %global _name %(tr - _ <<< %{name})
-Version:	6.13
-Release:	2%{?dist}
+Version:	6.14
+Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - Globus GSI Proxy Utility Programs
 
@@ -101,6 +101,10 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man1/*
 
 %changelog
+* Wed Mar 09 2016 Globus Toolkit <support@globus.org> - 6.14-1
+- Missing handle_init in grid-cert-diagnostics -c
+- Add option (-H) to compare hostname when checking a certificate with -c
+
 * Thu Aug 06 2015 Globus Toolkit <support@globus.org> - 6.13-2
 - Add vendor
 
